# sessions-saver

./: .gitignore  README.md  background.js  eventPage.js  manifest.json  package.json  popup.html  popup.js
chrome/: .gitignore  background.js  login.jsx  main.html  package.json
chrome/extension/: main.html  manifest.json  popup.js
chrome/extension/login/: login.html
server/: .env  Cargo.toml  Makefile  README.md
server/migrations/20160223002745_create_sessions_table/: up.sql
server/src/: auth.rs  errors.rs  main.rs  store.rs
server/src/store/: sessions.rs  users.rs
server/tests/: lib.rs
