[package]
name = "server"
version = "0.1.0"
authors = ["Jonathan Fok kan <jfokkan@gmail.com>"]

[dependencies]
iron = "*"
router = "*"

serde = "*"
serde_json = "*"
serde_macros = "*"

dotenv = "^0.8.0"
dotenv_macros = "^0.8.0"

iron-postgres-middleware = { git = "https://github.com/jonfk/iron-postgres-middleware.git" }
postgres = "0.11"
r2d2 = "0.6.3"
r2d2_postgres = "0.10.0"

rust-crypto = "^0.2"